[gd_scene load_steps=8 format=2]

[ext_resource path="res://JohnPopup.gd" type="Script" id=1]
[ext_resource path="res://GFX/metalPanel_plate.png" type="Texture" id=2]
[ext_resource path="res://GFX/glassPanel.png" type="Texture" id=3]
[ext_resource path="res://Button.gd" type="Script" id=4]
[ext_resource path="res://Button2.gd" type="Script" id=5]
[ext_resource path="res://Button3.gd" type="Script" id=6]
[ext_resource path="res://Button4.gd" type="Script" id=7]

[node name="JohnPopup" type="Popup"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -180.0
margin_bottom = 180.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
texture = ExtResource( 3 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
bbcode_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -224.0
margin_top = -160.0
margin_right = 224.0

[node name="Button" type="Button" parent="NinePatchRect2/VBoxContainer"]
visible = false
margin_right = 448.0
margin_bottom = 20.0
text = "placeholder"
script = ExtResource( 4 )

[node name="Button2" type="Button" parent="NinePatchRect2/VBoxContainer"]
visible = false
margin_right = 448.0
margin_bottom = 20.0
script = ExtResource( 5 )

[node name="Button3" type="Button" parent="NinePatchRect2/VBoxContainer"]
visible = false
margin_right = 448.0
margin_bottom = 20.0
script = ExtResource( 6 )

[node name="Button4" type="Button" parent="NinePatchRect2/VBoxContainer"]
visible = false
margin_right = 448.0
margin_bottom = 20.0
script = ExtResource( 7 )
[connection signal="pressed" from="NinePatchRect2/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="NinePatchRect2/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="NinePatchRect2/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="NinePatchRect2/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
